2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/COPYING: include text of GPL3 by request of Vincent.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	Bug 565504 - limited number of connections causes commands to fail

	* daemon/gvfsbackendftp.c: (g_vfs_backend_ftp_pop_connection):
	really fix this bug by not calling g_vfs_job_succeeded() on the error
	path.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (g_vfs_backend_ftp_pop_connection):
	remove fixme for max connection tracking, by remembering the max
	connections on the stack.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
	(ftp_connection_use), (ftp_connection_ensure_data_connection_epsv),
	(ftp_connection_ensure_data_connection_pasv),
	(ftp_connection_try_cd), (g_vfs_backend_ftp_pop_connection),
	(do_mount), (resolve_symlink), (do_enumerate):
	introduce ftp_connection_clear_error() for clarity

2008-12-30  Benjamin Otte  <otte@gnome.org>

	Bug 565504 - limited number of connections causes commands to fail

	* daemon/gvfsbackendftp.c: (g_vfs_backend_ftp_pop_connection):
	clear connection error before popping job, so that the error isn't
	propagated to the job

2008-12-16  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/trashexpunge.c: set files to mode 700 before
	deleting to deal with users trashing read-only directories

2008-12-16  Ryan Lortie  <desrt@desrt.ca>

	Bug 562955 – parallel build doesn't work

	* common/Makefile.am: use non-absolute path for libgvfscommon.la so
	that automake can see the dependency

2008-12-16  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c (trash_backend_add_info): add
	trash::orig-path and trash::deletion-date info

2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.2 ===

2008-12-15  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c:
	* daemon/gvfsbackendtrash.h: relicense to LGPLv2+
