@@ -2,5 +2,5 @@
 Type=smb-network;smb-server
 Exec=@libexecdir@/gvfsd-smb-browse
 DBusName=org.gtk.vfs.mountpoint.smb_browse
-AutoMount=true
+AutoMount=false
 Scheme=smb
