@@ -1,3 +1,12 @@
+2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>
+
+	* daemon/gvfsbackendnetwork.c:
+	* daemon/gvfsbackendsmbbrowse.c:
+	* daemon/smb-browse.mount.in:
+	SMB browsing authentication support (#524485)
+	Make smb-browse backend not automounted
+	Mount smb root on network backend automount
+
 2009-01-05  Ryan Lortie  <desrt@desrt.ca>
 
 	* daemon/trashlib/COPYING: include text of GPL3 by request of Vincent.
